--- a/docs/style.css
+++ b/docs/style.css
@@ -149,3 +149,49 @@ html, body {
     width: 100%;
     height: 100%;
 }
+
+
+
+.player-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 40px;
+    padding: 20px;
+}
+
+.tracklist-container {
+    background: rgba(255, 255, 255, 0);
+    padding: 15px;
+    border-radius: 12px;
+    color: #fff;
+    width: 400px;
+    max-height: 100vh;
+    overflow-y: auto;
+    font-size: 14px;
+    text-shadow: 2px 2px 2px rgba(139, 109, 156, 0.6);
+}
+
+.tracklist-container h3 {
+    margin-top: 0;
+    font-size: 18px;
+    text-align: center;
+    text-shadow: 2px 2px 2px rgba(139, 109, 156, 0.6);
+}
+
+#tracklist {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+#tracklist li {
+    padding: 8px;
+    cursor: pointer;
+    border-radius: 6px;
+}
+
+#tracklist li:hover {
+    background: rgba(255, 255, 255, 0.2);
+}
