--- a/docs/style.css
+++ b/docs/style.css
@@ -44,6 +44,7 @@ body {
     font-size: 16px;
     color: #fbf5ef;
     text-shadow: 2px 2px 2px rgba(139, 109, 156, 0.6);
+    line-height: 1.2;
 }
 /* 
 #progress-bar {
@@ -174,6 +175,7 @@ html, body {
     overflow-y: auto;
     font-size: 14px;
     text-shadow: 2px 2px 2px rgba(139, 109, 156, 0.6);
+    line-height: 1.05;
     display: flex;
     flex-direction: column;
     align-items: center;
